--- a/report/basic_report.xml
+++ b/report/basic_report.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
+    <!-- TODO: Renombrar este archivo -->
+
     <template id="report_payslip">
         <t t-call="web.html_container">
 
